syntax = "proto3";

package io.products.metadata.api;

option java_outer_classname = "MetadataApi";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "io/products/metadata/domain/metadata_domain.proto";

service MetadataService {
  option (kalix.codegen) = {
    value_entity: {
      name: "io.products.metadata.domain.Metadata"
      entity_type: "metadatas"
      state: "io.products.metadata.domain.MetadataState"
    }
  };

  rpc CreateMetadata(Metadata) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/create_metadata"
      body: "*"
    };
  };

  rpc GetMetadata(GetMetadataRequest) returns (Metadata);

  rpc UpdateMetadata(Metadata) returns (google.protobuf.Empty);

  rpc DeleteMetadata(DeleteMetadataRequest) returns (google.protobuf.Empty);

}

message Metadata {
  string channelId = 1  [(kalix.field).entity_key = true];
  string key = 2 [(kalix.field).entity_key = true];
  string value = 3;
  string grouping = 4;
}

message GetMetadataRequest {
  string channelId = 1 [(kalix.field).entity_key = true];
  string key = 2 [(kalix.field).entity_key = true];
}
message DeleteMetadataRequest {
  string channelId = 1 [(kalix.field).entity_key = true];
  string key = 2 [(kalix.field).entity_key = true];
}
